update: накинул миграцию

--- a/WebApi/Properties/launchSettings.json
+++ b/WebApi/Properties/launchSettings.json
@@ -9,12 +9,12 @@
     }
   },
   "profiles": {
-    "BeautySchools.Backend": {
+    "Xamarin.Api": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "CONNECTION_STRING": "Server=localhost;Port=5434;Database=xamarinDb;Username=postgres;Password=12345",
+        "CONNECTION_STRING": "Server=localhost;Port=5434;Database=trafficCodeDb;Username=postgres;Password=12345",
         "ADMIN_LOGIN": "admin",
         "ADMIN_PASSWORD": "123",
         "JWT_SECRET": "your-very-secret-key123456789011"
