update: каскадное удаление на сущностях, смена страницы отображения тем

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -22,6 +22,7 @@
     <ItemGroup>
       <Folder Include="FileRepository\" />
       <Folder Include="wwwroot\files\" />
+      <Folder Include="wwwroot\images\" />
     </ItemGroup>
     
 </Project>
