--- a/WebApi.Infrastructure/WebApi.Infrastructure.csproj
+++ b/WebApi.Infrastructure/WebApi.Infrastructure.csproj
@@ -8,7 +8,9 @@
 
 
     <ItemGroup>
+      <PackageReference Include="Cronos" Version="0.11.1" />
       <PackageReference Include="EFCore.BulkExtensions" Version="8.1.3" />
+      <PackageReference Include="FirebaseAdmin" Version="3.4.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
